--- a/app/src/main/res/layout/activity_addevent.xml
+++ b/app/src/main/res/layout/activity_addevent.xml
@@ -21,7 +21,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <TextView
                 android:id="@+id/textView4"
@@ -49,6 +50,19 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textMultiLine" />
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.47"
+                android:entries="@array/country_arrays"/>
+
+            <DatePicker
+                android:id="@+id/datePicker"
+                android:layout_width="367dp"
+                android:layout_height="286dp"
+                android:layout_weight="0.36" />
 
             <Button
                 android:id="@+id/buttonOk"
