--- a/app/src/main/res/layout/activity_addmatch.xml
+++ b/app/src/main/res/layout/activity_addmatch.xml
@@ -30,7 +30,7 @@
                 android:text="Mannschaft 1" />
 
             <EditText
-                android:id="@+id/editText7"
+                android:id="@+id/editTextTeam1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -44,7 +44,7 @@
                 android:text="Mannschaft 2" />
 
             <EditText
-                android:id="@+id/editText8"
+                android:id="@+id/editTextTeam2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -58,7 +58,7 @@
                 android:text="Result 1" />
 
             <EditText
-                android:id="@+id/editText9"
+                android:id="@+id/editTextResult1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -71,7 +71,7 @@
                 android:text="Result 2" />
 
             <EditText
-                android:id="@+id/editText10"
+                android:id="@+id/editTextResult2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
