error handling pop up add matches and events

--- a/app/src/main/res/layout/activity_addevent.xml
+++ b/app/src/main/res/layout/activity_addevent.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.gruppe3.myapplication.AddEventActivity">
@@ -31,7 +32,7 @@
                 android:text="Event Name" />
 
             <EditText
-                android:id="@+id/editText7"
+                android:id="@+id/editTextEventName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -45,14 +46,14 @@
                 android:text="Info" />
 
             <EditText
-                android:id="@+id/txtInfo"
+                android:id="@+id/editTextInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textMultiLine" />
 
             <Spinner
-                android:id="@+id/spinner"
+                android:id="@+id/spinnerType"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.47"
