--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.gruppe3.myapplication.MainActivity">
+    tools:context="com.example.gruppe3.myapplication.ActivityController.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
